<resources>
    <string name="app_name">BSUIR SMART CLOCK</string>
    <string name="schedule">Расписание</string>
    <string name="groups">Группы</string>
    <string name="alarm">Будильник</string>
    <string name="settings">Настройки</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sunday">Воскресение</string>
    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>

    <string name="first_middle_names">1$s, 2$s</string>
    <string name="list">Списки</string>
    <string name="employee">Преподаватели</string>
    <string name="course">Курс:</string>
    <string name="faculty">Факультет:</string>
    <string name="speciality">Специальность:</string>
    <string name="search">Search</string>
    <string name="auditory">Аудитории</string>

    <string name="subgroup_numb">Подгруппа: %d</string>

    <string name="group">Группа</string>
    <string name="subgroup">Подгруппа</string>
    <string name="first">Первая</string>
    <string name="second">Вторая</string>
    <string name="all">Вся</string>
    <string name="choose_time">Выберите время до универа</string>
    <string name="set_alarm_to_first_pair">Устанавливать будильник на первую пару</string>
    <string name="do_you_want_remove_item">Вы действительно хотите удалить из списка?</string>
    <string name="accept">Подтвердить</string>
    <string name="reject">Отмена</string>
    <string name="alarm_notification_channel">alarm_notification</string>
    <string name="alarm_notification_title">Не забудьте поставить будильник!</string>
    <string name="alarm_notification_channel_name">Будильник</string>
    <string name="alarm_notification_channel_description">Напоминания поставить будильник</string>
    <string name="set_alarm">Установить</string>

</resources>
