<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="studentGroupInfo"
            type="com.helicopter.domain.models.StudentGroupInfoDomainModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:elevation="@dimen/default_elevation"
        app:cardCornerRadius="@dimen/default_radius"
        tools:context=".ui.fragments.main.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/group_numb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@{studentGroupInfo.studentGroup.name}"
                tools:text="851001"
                android:textAppearance="@style/TextAppearance.Title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/course_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_margin"
                android:text="@string/course"
                android:textAppearance="@style/TextAppearance.Title.Subtitle"
                app:layout_constraintBottom_toBottomOf="@+id/group_numb"
                app:layout_constraintEnd_toStartOf="@+id/course"
                app:layout_constraintTop_toTopOf="@+id/group_numb"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/course"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@{String.valueOf(studentGroupInfo.studentGroup.course)}"
                tools:text="2"
                android:textAppearance="@style/TextAppearance.Title.Subtitle"
                app:layout_constraintBottom_toBottomOf="@+id/course_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/course_text" />

            <TextView
                android:id="@+id/faculty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/faculty"
                app:layout_constraintStart_toStartOf="@+id/group_numb"
                app:layout_constraintTop_toBottomOf="@+id/group_numb" />

            <TextView
                android:id="@+id/faculty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:text="@{studentGroupInfo.faculty.abbrev}"
                app:layout_constraintBottom_toBottomOf="@+id/faculty_text"
                app:layout_constraintStart_toEndOf="@+id/faculty_text"
                app:layout_constraintTop_toTopOf="@+id/faculty_text"
                tools:text="КСИС"/>

            <TextView
                android:id="@+id/speciality_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@string/speciality"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/faculty_text"
                app:layout_constraintTop_toBottomOf="@+id/faculty_text" />

            <TextView
                android:id="@+id/speciality"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:singleLine="true"
                android:text="@{studentGroupInfo.speciality.abbrev}"
                app:layout_constraintBottom_toBottomOf="@+id/speciality_text"
                app:layout_constraintEnd_toEndOf="@+id/course"
                app:layout_constraintStart_toEndOf="@+id/speciality_text"
                app:layout_constraintTop_toTopOf="@+id/speciality_text"
                tools:text="Программное обеспечение информационных технолоний" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>